[project]
name = "invite-me"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.32",
    "psycopg>=3.2.1",
    "pydantic>=2.8.2",
    "fastapi>=0.112.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
