[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["invite_me"]

[project]
name = "invite-me"
version = "0.0.1"
requires-python = ">= 3.12"
dependencies = [
    "uuid7",
    "sqlmodel",
    "fastapi[standard]",
    "psycopg",
    "psycopg_binary",
    "celery"
]